- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.15.2, 6.1.1
- 
        
- 
        d2e88b8094db0bda6b3ab89172352861ae18d301 (qt/qtbase/dev) e4741830591cb45788753e07fcb5c281b13058e5 (qt/qtbase/6.1) 89a6ec923b5bac1035e473bcbad269e327153979 (qt/qtbase/6.2) 551b9fc2aaf254a768a4d7f43d274b1f53f33237 (qt/tqtc-qtbase/5.15)
Running a simple QFileDialog with a QSortFilterProxyModel will result in the file name completer to dissapear.
Script is here  dialog.py 
 
This is on Windows  2021-06-25 14-37-48.mp4 
 
MacOS works fine with the proxy  2021-06-25 14-34-09.mp4 
 
I believe this is a regression from 5.12.
- resulted from
- 
                    QTBUG-78043 non-native QFileDialog displaying incorrect mapped network drive names -         
- Closed
 
-